manifests/preview/123/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: todo-app
    app.kubernetes.io/instance: preview
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: todo-app
    helm.sh/chart: todo-app-0.1.0
    istio-injection: enabled
    pr_number: pr-123
    tier: preview
    version: 827f6a4
  name: preview-123-todo-app
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo-app
    app.kubernetes.io/instance: preview
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: todo-app
    helm.sh/chart: todo-app-0.1.0
    pr_number: pr-123
    tier: preview
    version: 827f6a4
  name: preview-todo-app
  namespace: preview-123-todo-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: preview
    app.kubernetes.io/name: todo-app
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todo-app
    app.kubernetes.io/instance: preview
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: todo-app
    helm.sh/chart: todo-app-0.1.0
    pr_number: pr-123
    tier: preview
    version: 827f6a4
  name: preview-todo-app
  namespace: preview-123-todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: preview
      app.kubernetes.io/name: todo-app
  template:
    metadata:
      labels:
        app: todo-app
        app.kubernetes.io/instance: preview
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: todo-app
        helm.sh/chart: todo-app-0.1.0
        pr_number: pr-123
        sidecar.istio.io/inject: "true"
        tier: preview
        version: 827f6a4
    spec:
      containers:
        - image: rminz/todo-app:827f6a4@sha256:f910d2f628f4e7e9488dda1ccb97f3ab44ec3f8ff7321ab7421738a617dd5ad4
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          name: todo-app
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: todo
  namespace: preview-123-todo-app
spec:
  host: preview-todo-app
  subsets:
    - labels:
        version: 827f6a4
      name: preview-827f6a4
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app: todo-app
    app.kubernetes.io/instance: preview
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: todo-app
    helm.sh/chart: todo-app-0.1.0
    pr_number: pr-123
    tier: preview
    version: 827f6a4
  name: todo
  namespace: preview-123-todo-app
spec:
  gateways:
    - istio-system/ingress-gateway
  hosts:
    - todo-123-pr.127.0.0.1.sslip.io
    - todo-123-pr-827f6a4.127.0.0.1.sslip.io
  http:
    - match:
        - authority:
            prefix: todo-123-pr
      route:
        - destination:
            host: keda-add-ons-http-interceptor-proxy.keda-http-addon.svc.cluster.local
            port:
              number: 8080
    - match:
        - authority:
            prefix: todo-123-pr-827f6a4
      route:
        - destination:
            host: preview-todo-app
            port:
              number: 80
            subset: preview-827f6a4
